--- a/Calculator/Style.css
+++ b/Calculator/Style.css
@@ -1,7 +1,8 @@
-body{
+body {
     background-color: white;
 }
-table{
+
+table {
     margin: auto;
     background-color: LightGray;
     width: 305px;
@@ -9,8 +10,12 @@ table{
     text-align: center;
     border-radius: 2px;
 }
-h1 {text-align: center;}
-input{
+
+h1 {
+    text-align: center;
+}
+
+input {
     outline: 0;
     position: relative;
     left: 1px;
@@ -24,7 +29,8 @@ input{
     margin: 5px;
     font-size: 20px;
 }
-#result{
+
+#result {
     width: 220px;
     font-size: 20px;
     text-align: center;
