--- a/Calculator/Style.css
+++ b/Calculator/Style.css
@@ -1,38 +1,39 @@
-body {
-    background-color: white;
-}
+body{
+  color:#bcbbbe;
+  background-color: #6e4daf;
+  background-image:
+    radial-gradient(100% 90% ellipse at center top, #eb732e 0%, #bcbbbe 100%);
 
-table {
-    margin: auto;
-    background-color: LightGray;
-    width: 305px;
-    height: 355px;
-    text-align: center;
-    border-radius: 2px;
-}
+  ;
+  background-attachment: fixed;
 
-h1 {
-    text-align: center;
 }
-
-input {
-    outline: 0;
-    position: relative;
-    left: 1px;
-    top: 1px;
-    border: 0;
-    color: orange;
-    background-color: #F9F9F9;
-    width: 60px;
-    height: 55px;
-    float: left;
-    margin: 5px;
-    font-size: 20px;
+table{
+  margin: auto;
+  background-color: LightGray;
+  width: 305px;
+  height: 355px;
+  text-align: center;
+  border-radius: 2px;
 }
-
-#result {
-    width: 220px;
-    font-size: 20px;
-    text-align: center;
-    float: left;
+h1 {text-align: center;}
+input{
+  outline: 0;
+  position: relative;
+  left: 1px;
+  top: 1px;
+  border: 0;
+  color: orange;
+  background-color: #F9F9F9;
+  width: 60px;
+  height: 55px;
+  float: left;
+  margin: 5px;
+  font-size: 20px;
+}
+#result{
+  width: 220px;
+  font-size: 20px;
+  text-align: center;
+  float: left;
 }
