--- a/Data-Structure/src/app/stack/stack.component.html
+++ b/Data-Structure/src/app/stack/stack.component.html
@@ -1,31 +1,16 @@
 <br>
 <h1>Last In First Out(LIFO)</h1>
 <div class="butfirst">
-  <input  type="text" placeholder="Push Number" id="pushNum" >
-  <button type="button" class="button"  onclick="pushElm(pushNum)" >Push</button>
-  <input  type="text" placeholder="Push Number" id="pushNum" >
-<br>
-  <button type="button" class="button"  onclick="popElm()">Pop</button>
+  <button  mat-raised-button (click)="Push();" >Push</button>
+  <button mat-raised-button [disabled]="!dataSource.length" class="button"  (click)="Pop();" >Pop</button>
   
 </div>
-<br>
 <div>
-<br>
-    <table id="myTable" class="table">
-        <thead>
-          <tr>
-            <th>1</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td>2</td>
-          </tr>
-        </tbody>
-        <tfoot>
-          <tr>
-            <td>3</td>
-          </tr>
-        </tfoot>
-    </table>
+    <table mat-table [dataSource]="dataSource" class="table">
+ 
+      <ng-container matColumnDef="num">
+        <td mat-cell *matCellDef="let element">{{element.num}}</td>
+        </ng-container>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+      </table>
 </div>
