--- a/Data-Structure/src/app/stack/stack.component.css
+++ b/Data-Structure/src/app/stack/stack.component.css
@@ -25,7 +25,8 @@ button{
  
 
 .table{
-    margin: auto;
+  padding: 2px 6px;
+  margin: 2px 35px;
     color: #e406c6;
     font-size: 20px;
     width: 60px;
