--- a/Data-Structure/src/app/app.component.css
+++ b/Data-Structure/src/app/app.component.css
@@ -5,7 +5,7 @@ h1{
 }
 
 button{
-background-color: rgb(255, 254, 254); /* Green */
+background-color: rgb(255, 254, 254); 
   padding: 6px 6px;
   text-align: center;
   font-size: 15px;
