rename my project

--- a/My Projects/src/app/app.component.html
+++ b/My Projects/src/app/app.component.html
@@ -1,5 +1,5 @@
 <div class="first"><br>
-  <h1>Data Structure</h1>
+  <h1>My Projects</h1>
   <div class="btn-group">
     <button class="button" (click)="ShowStack('stack');">Stack</button>
     <button class="button"  (click)="ShowQueue('queue');">Queue</button>
