--- a/My Projects/src/app/age-calculator/age-calculator.component.css
+++ b/My Projects/src/app/age-calculator/age-calculator.component.css
@@ -3,7 +3,20 @@ h1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
-
+button{
+    background-color: rgb(255, 254, 254); 
+      padding: 6px 6px;
+      text-align: center;
+      font-size: 15px;
+      cursor: pointer;
+      width: 80px;
+      border-radius: 13px;
+      margin: 6px 15px;
+      border: 2px solid aquamarine;
+    
+    
+    }
+    
 
 form{
     text-align: center;
