--- a/My Projects/src/app/units/units.component.html
+++ b/My Projects/src/app/units/units.component.html
@@ -6,32 +6,34 @@
     <input id="num" [(ngModel)]="num">   
 
     <div >
-          <mat-form-field  appearance="fill">
+          <mat-form-field    appearance="fill" >
             <mat-label>From</mat-label>
-            <mat-select [(value)]="selectedValue">
+            <mat-select [(ngModel)]="selectedValue" [(value)]="selectValue">
                 <mat-option value="Meter">Meter</mat-option>
                 <mat-option value="Kilometre">Kilometre</mat-option>
                 <mat-option value="Centimeter">Centimeter</mat-option>
                 <mat-option value="Mile">Mile</mat-option>
-                <mat-option value="Millimeter">Millimeter</mat-option>
                 <mat-option value="Foot">Foot</mat-option>
+                <mat-option value="Inch">Inch</mat-option>
+                <mat-option value="Yard">Yard</mat-option>
+
             </mat-select>
         </mat-form-field>
 <br>
-        <mat-form-field appearance="fill">
+        <mat-form-field   appearance="fill" >
             <mat-label>To</mat-label>
-            <mat-select [(value)]="selectedValue1">
+            <mat-select   [(ngModel)]="selectedValue1" [(value)]="selectValue1">
                 <mat-option value="Meter1">Meter</mat-option>
                 <mat-option value="Kilometre1">Kilometre</mat-option>
                 <mat-option value="Centimeter1">Centimeter</mat-option>
                 <mat-option value="Mile1">Mile</mat-option>
-                <mat-option value="Millimeter1">Millimeter</mat-option>
                 <mat-option value="Foot1">Foot</mat-option>
-
+                <mat-option value="Inch1">Inch</mat-option>
+                <mat-option value="Yard1">Yard</mat-option>
                 
             </mat-select>
         </mat-form-field><br>
-        <button (click)="ConvertfromMeters()" >Calculate</button><br>
-        <a [(ngModel)]="answer"> {{answer}}</a>
+        <button (click)="Calculator()" >Calculate</button><br>
+        <input readonly [(ngModel)]="answer" placeholder={{answer}}>
     </div>
 </div>
