added count of letter

--- a/My Projects/src/app/counting/counting.component.html
+++ b/My Projects/src/app/counting/counting.component.html
@@ -10,7 +10,8 @@
       </mat-form-field>
 </div>
 
-<button (click)="CalculateCount()">Counting</button>
-<input readonly [(ngModel)]="answer" placeholder={{answer}}>
+<button (click)="CalculateCount()">Counting Words</button>
+<button (click)="CalculateLatter()">Counting Latter</button>
 
+<br><input readonly [(ngModel)]="answer" placeholder={{answer}}>
 </div>
