--- a/My Projects/src/app/queue/queue.component.css
+++ b/My Projects/src/app/queue/queue.component.css
@@ -23,7 +23,7 @@ button{
     border:solid 4px rgb(5, 4, 4);
   }
   th{
-    background-color: #f084e1;
+    background-color: rgb(239, 173, 252);
     border:4px solid black;
     color: black;
 
