modified function calculateCount

--- a/My Projects/src/app/app.component.html
+++ b/My Projects/src/app/app.component.html
@@ -3,7 +3,15 @@
   <div class="btn-group">
     <button class="button" (click)="ShowStack('stack');">Stack</button>
     <button class="button"  (click)="ShowQueue('queue');">Queue</button>
- 
+    <button class="button"  (click)="ShowageCalculator('age-calculator');">Age Calculator</button>
+    <button class="button"  (click)="ShowPercentage('percentage');">Percentage</button>
+    <button class="button"  (click)="ShowUnits('units');">Unit conversion</button>
+    <button class="button"  (click)="ShowCounting('counting');">Counting</button>
+    <button class="button"  (click)="ShowWeather('weather');">Weather</button>
+
+
+
+
   </div>
 </div>
 
