modified weather component

--- a/My Projects/src/app/weather/weather.component.html
+++ b/My Projects/src/app/weather/weather.component.html
@@ -1,1 +1,14 @@
-<p>weather works!</p>
+
+
+<div class="first">
+    <h1>Weather</h1>
+      
+    <div >
+        <mat-form-field  appearance="fill"  >
+            <mat-label>City</mat-label>
+            <textarea  matInput cdkTextareaAutosize #autosize="cdkTextareaAutosize" ></textarea>
+          </mat-form-field>
+
+    </div>
+    <button >Get Weather</button>
+</div>
