--- a/My Projects/src/app/todo/todo.component.css
+++ b/My Projects/src/app/todo/todo.component.css
@@ -1,44 +1,4 @@
 
-
-h1{
-    font-family: fantasy;
-}
-input[type=text] {
-    width: 60%;
-    padding: 8px 20px;
-    margin: 4px 0;
-    display: inline-block;
-    border: 1px solid #ccc;
-    border-radius: 4px;
-  }
-
-
-div.todo{
-    width: 100%;
-    margin-top: 10em;
-    background-color:	#9cb1a033;
-    max-width: 50%;
-    box-shadow: 8px 6px#858181;
-    border-radius: 20px;
-    padding: 0;
-    min-height: 350px;
-    min-width: 400px;
-    margin-left: auto;
-    margin-right: auto;
-    
-}
-button.butadd{
-    font-size: 15px;
-    background-color: lightblue;
-    color: white;
-    text-align: center;
-    width: 20; 
-    padding: 9px 20px;
-    margin: 4px 0px;
-    border: 1px solid #ccc;
-    border-radius: 6px;
-        
-}
 li{
     
     text-align: left;
@@ -62,4 +22,55 @@ button.buttondel {
     border: 1px solid #ccc;
     border-radius: 6px;
 }
+
+h1{
+    text-align:center ;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+div.first{
+    text-align: center;
+    width: 100%;
+    margin-top: 2em;
+    background-color:rgb(239, 173, 252);
+    max-width: 50%;
+    box-shadow: 8px 6px rgb(207, 129, 231);
+    border-radius: 20px;
+    padding: 0;
+    min-height: 300px;
+    min-width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    
+}
+
+button{
+    width: 150px;
+    height: 30px;
+    padding: 6px 6px;
+    text-align: center;
+    font-size: 15px;
+    background-color:aquamarine ;
+    border: 2px solid #a39797;
+    cursor: pointer;
+    border-radius: 6px;
+    margin: 4px 6px;
+}
+h1{
+    text-align:center ;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
+}
+input{
+    background-color: transparent; 
+  padding: 6px 6px;
+  text-align: center;
+  font-size: 15px;
+  width: 180px;
+  margin: 4px 6px;
+  border: 2px solid aquamarine;
+}
+
+
+
 
