--- a/My Projects/src/app/todo/todo.component.html
+++ b/My Projects/src/app/todo/todo.component.html
@@ -1,5 +1,6 @@
 
-<div class="todo"><br>
+<div class="first">
+  <br>
     <h1 > MY TODO LIST </h1>
     <input  type="text" placeholder="Enter Your Task"  #task>
     <button (click)="addTask(task.value)" class="butadd" >add</button>
@@ -12,3 +13,5 @@
       </ul>
     </div>
   </div>
+
+
