--- a/My Projects/src/app/app.component.html
+++ b/My Projects/src/app/app.component.html
@@ -1,13 +1,13 @@
 <div class="first"><br>
   <h1>My Projects</h1>
   <div class="btn-group">
+    <button class="button" (click)="ShowTodo('todo');">TODO List</button>
     <button class="button" (click)="ShowStack('stack');">Stack</button>
     <button class="button"  (click)="ShowQueue('queue');">Queue</button>
     <button class="button"  (click)="ShowageCalculator('age-calculator');">Age Calculator</button>
     <button class="button"  (click)="ShowPercentage('percentage');">Percentage</button>
     <button class="button"  (click)="ShowUnits('units');">Unit conversion</button>
     <button class="button"  (click)="ShowCounting('counting');">Counting</button>
-    <button class="button"  (click)="ShowWeather('weather');">Weather</button>
 
 
 
