--- a/My Projects/src/app/todo/todo.component.html
+++ b/My Projects/src/app/todo/todo.component.html
@@ -1,7 +1,7 @@
 
 <div class="first">
   <br>
-    <h1 > MY TODO LIST </h1>
+    <h1 > TODO List </h1>
     <input  type="text" placeholder="Enter Your Task"  #task>
     <button (click)="addTask(task.value)" class="butadd" >add</button>
     <br>
