adding icons button

--- a/My Projects/src/app/app.component.html
+++ b/My Projects/src/app/app.component.html
@@ -1,5 +1,6 @@
 <div class="first"><br>
-  <h1>My Projects</h1>
+  <h1>My Projects
+  </h1> 
   <div class="btn-group">
     <button class="button" (click)="ShowTodo('todo');">TODO List</button>
     <button class="button" (click)="ShowStack('stack');">Stack</button>
@@ -8,7 +9,10 @@
     <button class="button"  (click)="ShowPercentage('percentage');">Percentage</button>
     <button class="button"  (click)="ShowUnits('units');">Unit conversion</button>
     <button class="button"  (click)="ShowCounting('counting');">Counting</button>
-
+    <button mat-raised-button color="accent">
+      <mat-icon>github</mat-icon>
+      
+  </button>
 
 
 
