--- a/My Projects/src/app/app.component.css
+++ b/My Projects/src/app/app.component.css
@@ -4,9 +4,11 @@ h1{
     text-align: center;
     font-family: fantasy;
   
-    
-
+  
 }
+svg{
+  text-align: left;
+}  
 
 button{
 background-color: rgb(255, 254, 254); 
