--- a/My Projects/src/app/app.component.css
+++ b/My Projects/src/app/app.component.css
@@ -1,13 +1,12 @@
 
 h1{
     background-color: aquamarine;
-    text-align: center;
     font-family: fantasy;
-  
+    text-align: center;
   
 }
-svg{
-  text-align: left;
+a{
+  text-align: right;
 }  
 
 button{
