do the same style for age calculator

--- a/My Projects/src/app/age-calculator/age-calculator.component.html
+++ b/My Projects/src/app/age-calculator/age-calculator.component.html
@@ -1,4 +1,5 @@
-
+<br>
+<br>
 <br>
 <div class="first"><br>
     <h1>Age Calculate</h1>
@@ -9,7 +10,7 @@
           <mat-datepicker #datepicker ></mat-datepicker>
      </mat-form-field ><br>
      <button (click)="calc()" >Calculate</button><br>
-     <br><a [(ngModel)]="Age"> {{Age}}</a>
+     <br><input class="input1" readonly [(ngModel)]="Age"  placeholder={{Age}} >
 
 
 </div>
