--- a/My Projects/src/app/age-calculator/age-calculator.component.css
+++ b/My Projects/src/app/age-calculator/age-calculator.component.css
@@ -3,32 +3,16 @@ h1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
-button{
-    background-color: rgb(255, 254, 254); 
-      padding: 6px 6px;
-      text-align: center;
-      font-size: 15px;
-      cursor: pointer;
-      width: 80px;
-      border-radius: 13px;
-      margin: 6px 15px;
-      border: 2px solid aquamarine;
-    
-    
-    }
-    
-
-form{
-    text-align: center;
-
+a{
+    background-color: azure;
 }
 div.first{
     text-align: center;
     width: 100%;
     margin-top: 2em;
-    background-color:rgb(239, 173, 252);
-    max-width: 50%;
-    box-shadow: 8px 6px rgb(207, 129, 231);
+    background-color:rgb(218, 218, 218);
+    max-width: 30%;
+    box-shadow: 8px 6px rgb(104, 103, 104);
     border-radius: 20px;
     padding: 0;
     min-height: 300px;
@@ -37,6 +21,29 @@ div.first{
     margin-right: auto;
     
 }
-a{
-    background-color: azure;
+
+button{
+    width: 150px;
+    height: 30px;
+    padding: 6px 6px;
+    text-align: center;
+    font-size: 15px;
+    background-color:#23a6d5 ;
+    cursor: pointer;
+    border: transparent;
+    border-radius: 6px;
+    margin: 4px 6px;
+}
+input.input1{
+    background-color: transparent; 
+  padding: 6px 6px;
+  text-align: center;
+  font-size: 15px;
+  width: 180px;
+  margin: 4px 6px;
+  border: 2px solid #23a6d5;
+}
+form{
+    text-align: center;
+
 }
