changing style of pages

--- a/My Projects/src/app/percentage/percentage.component.html
+++ b/My Projects/src/app/percentage/percentage.component.html
@@ -1,15 +1,16 @@
-
+<br>
+<br>
 <br>
 <div class="first"><br>
     <h1>Percentage Calculator</h1>
 <div>
     <a>What Is</a>
-    <input id="num" [(ngModel)]="num"> <a> % </a>
-    <a>Of</a>
+    <input id="num" [(ngModel)]="num"> <a> % </a><br>
+    <a> Of </a>
     <input  id="num1" [(ngModel)]="num1">
     <br>
     <button (click)="calc()" >Calculate</button><br>
-    <br><a [(ngModel)]="percent"> {{percent}}</a>
+    <input readonly [(ngModel)]="percent" placeholder={{percent}}>
 </div>
 
 </div>
