--- a/My Projects/src/app/units/units.component.html
+++ b/My Projects/src/app/units/units.component.html
@@ -1,4 +1,5 @@
 <br>
+<br>
 <div class="first"><br>
     <h1>Unit conversion</h1>
 
@@ -34,6 +35,8 @@
             </mat-select>
         </mat-form-field><br>
         <button (click)="Calculator()" >Calculate</button><br>
-        <input readonly [(ngModel)]="answer" placeholder={{answer}}>
+        <input readonly [(ngModel)]="answer" placeholder={{answer}}><br>
+        <br>
+        <br>
     </div>
 </div>
