--- a/My Projects/src/app/counting/counting.component.css
+++ b/My Projects/src/app/counting/counting.component.css
@@ -7,9 +7,9 @@ div.first{
     text-align: center;
     width: 100%;
     margin-top: 2em;
-    background-color:rgb(239, 173, 252);
-    max-width: 50%;
-    box-shadow: 8px 6px rgb(207, 129, 231);
+    background-color:rgb(218, 218, 218);
+    max-width: 30%;
+    box-shadow: 8px 6px rgb(104, 103, 104);
     border-radius: 20px;
     padding: 0;
     min-height: 300px;
@@ -25,9 +25,9 @@ button{
     padding: 6px 6px;
     text-align: center;
     font-size: 15px;
-    background-color:aquamarine ;
-    border: 2px solid #a39797;
+    background-color:#23a6d5 ;
     cursor: pointer;
+    border: transparent;
     border-radius: 6px;
     margin: 4px 6px;
 }
@@ -43,5 +43,6 @@ input{
   font-size: 15px;
   width: 180px;
   margin: 4px 6px;
-  border: 2px solid aquamarine;
+  border: 2px solid #23a6d5;
 }
+
