--- a/My Projects/src/app/counting/counting.component.html
+++ b/My Projects/src/app/counting/counting.component.html
@@ -1,6 +1,8 @@
 
-
-<div class="first">
+<br>
+<br>
+<br>
+<div class="first"><br>
 <h1>Counting Words</h1>
   
 <div >
@@ -10,7 +12,7 @@
       </mat-form-field>
 </div>
 
-<button (click)="CalculateCount()">Counting Words</button>
+<button (click)="CalculateCount()">Counting Words</button><br>
 <button (click)="CalculateLatter()">Counting Latter</button>
 
 <br><input readonly [(ngModel)]="answer" placeholder={{answer}}>
