--- a/My Projects/src/app/percentage/percentage.component.css
+++ b/My Projects/src/app/percentage/percentage.component.css
@@ -1,15 +1,19 @@
+
 h1{
     text-align:center ;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
+a{
+    font-size: medium;
+}
 div.first{
     text-align: center;
     width: 100%;
     margin-top: 2em;
-    background-color:#fc8966;
-    max-width: 25%;
-    box-shadow: 8px 6px #df572e;
+    background-color:rgb(218, 218, 218);
+    max-width: 30%;
+    box-shadow: 8px 6px rgb(104, 103, 104);
     border-radius: 20px;
     padding: 0;
     min-height: 300px;
@@ -18,28 +22,26 @@ div.first{
     margin-right: auto;
     
 }
-a{
-    font-size: medium;
-}
-input{
-    background-color: rgb(255, 254, 254); 
-  padding: 6px 6px;
-  text-align: center;
-  font-size: 15px;
-  width: 80px;
-  border-radius: 8px;
-  margin: 4px 6px;
-  border: 2px solid #dbf8dc;
-}
+
 button{
-    width: 80px;
+    width: 150px;
     height: 30px;
     padding: 6px 6px;
     text-align: center;
     font-size: 15px;
-    background-color:aquamarine ;
-    border: 2px solid #ffffff;
+    background-color:#23a6d5 ;
     cursor: pointer;
+    border: transparent;
     border-radius: 6px;
     margin: 4px 6px;
 }
+input{
+    background-color: transparent; 
+  padding: 6px 6px;
+  text-align: center;
+  font-size: 15px;
+  width: 160px;
+  margin: 4px 6px;
+  border: 2px solid #23a6d5;
+}
+
