--- a/My Projects/src/app/queue/queue.component.css
+++ b/My Projects/src/app/queue/queue.component.css
@@ -1,30 +1,50 @@
 h1{
-    background-color: aquamarine;
-    width:250px;
-}
-button{
-    width: 80px;
-    height: 30px;
-    padding: 6px 6px;
-    text-align: center;
-    font-size: 15px;
-    background-color:rgb(68, 255, 124) ;
-    border: 2px solid #ffffff;
-    cursor: pointer;
-    border-radius: 6px;
-    margin: 4px 6px;
-  }
+  text-align:center ;
+  font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
+}
   table {
     border-collapse: collapse;
     margin: 2px 15px;
-    width: 30%;
+    width: 93%;
     border-radius: 12px;
     border:solid 4px rgb(5, 4, 4);
   }
   th{
-    background-color: rgb(239, 173, 252);
+    background-color: #23a6d5;
     border:4px solid black;
     color: black;
 
 }
+a{
+  text-align: right;
+}
+div.first{
+  text-align: center;
+  width: 100%;
+  margin-top: 2em;
+  background-color:rgb(218, 218, 218);
+  max-width: 30%;
+  box-shadow: 8px 6px rgb(104, 103, 104);
+  border-radius: 20px;
+  padding: 0;
+  min-height: 300px;
+  min-width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+
+button{
+  width: 150px;
+  height: 30px;
+  padding: 6px 6px;
+  text-align: center;
+  font-size: 15px;
+  background-color:#23a6d5 ;
+  cursor: pointer;
+  border: transparent;
+  border-radius: 6px;
+  margin: 4px 6px;
+}
+
