--- a/My Projects/src/app/stack/stack.component.css
+++ b/My Projects/src/app/stack/stack.component.css
@@ -1,34 +1,9 @@
 
-h1{
-  background-color: aquamarine;
-  width:250px;
-}
-button{
-    width: 70px;
-    height: 30px;
-    padding: 6px 6px;
-    text-align: center;
-    font-size: 15px;
-    background-color:rgb(68, 255, 124) ;
-    border: 2px solid #ffffff;
-    cursor: pointer;
-    border-radius: 6px;
-    margin: 4px 6px;
-  }
-  input{
-    height:9px;
-    padding: 6px 6px;
-    text-align: center;
-
-  }
-  
-  
- 
 
 .table{
   padding: 2px 6px;
-  margin: 2px 35px;
-    color: rgb(239, 173, 252);
+  margin: 2px 180px;
+    color: #23a6d5;
     font-size: 20px;
     width: 60px;
     height: 35px;
@@ -38,8 +13,39 @@ button{
 }
 
 tr {
-  background-color:rgb(239, 173, 252);
+  background-color:#23a6d5;
   height: 65px;
   width: 320px;
 
+}
+a{
+  background-color: azure;
+}
+div.first{
+  text-align: center;
+  width: 100%;
+  margin-top: 2em;
+  background-color:rgb(218, 218, 218);
+  max-width: 30%;
+  box-shadow: 8px 6px rgb(104, 103, 104);
+  border-radius: 20px;
+  padding: 0;
+  min-height: 300px;
+  min-width: 200px;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
+
+button{
+  width: 150px;
+  height: 30px;
+  padding: 6px 6px;
+  text-align: center;
+  font-size: 15px;
+  background-color:#23a6d5 ;
+  cursor: pointer;
+  border: transparent;
+  border-radius: 6px;
+  margin: 4px 6px;
 }
