--- a/My Projects/src/app/units/units.component.css
+++ b/My Projects/src/app/units/units.component.css
@@ -7,9 +7,9 @@ div.first{
     text-align: center;
     width: 100%;
     margin-top: 2em;
-    background-color:rgb(239, 173, 252);
-    max-width: 50%;
-    box-shadow: 8px 6px rgb(207, 129, 231);
+    background-color:rgb(218, 218, 218);
+    max-width: 30%;
+    box-shadow: 8px 6px rgb(104, 103, 104);
     border-radius: 20px;
     padding: 0;
     min-height: 300px;
@@ -18,15 +18,14 @@ div.first{
     margin-right: auto;
     
 }
-
 button{
     width: 80px;
     height: 30px;
     padding: 6px 6px;
     text-align: center;
     font-size: 15px;
-    background-color:aquamarine ;
-    border: 2px solid #a39797;
+    background-color:#23a6d5 ;
+    border: transparent;
     cursor: pointer;
     border-radius: 6px;
     margin: 4px 6px;
@@ -36,21 +35,7 @@ h1{
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 
 }
-div.first{
-    text-align: center;
-    width: 100%;
-    margin-top: 2em;
-    background-color:rgb(239, 173, 252);
-    max-width: 50%;
-    box-shadow: 8px 6px rgb(207, 129, 231);
-    border-radius: 20px;
-    padding: 0;
-    min-height: 300px;
-    min-width: 200px;
-    margin-left: auto;
-    margin-right: auto;
-    
-}
+
 input{
     background-color: transparent; 
   padding: 6px 6px;
@@ -58,5 +43,6 @@ input{
   font-size: 15px;
   width: 180px;
   margin: 4px 6px;
-  border: 2px solid aquamarine;
+  border: 2px solid#23a6d5 ;
+  ;
 }
