--- a/My Projects/src/app/app.component.html
+++ b/My Projects/src/app/app.component.html
@@ -1,6 +1,6 @@
 
 <div class="first"><br>
-  <h1><a>My Projects</a>  </h1> 
+  <h1>My Projects </h1> 
  
   
  
@@ -13,9 +13,10 @@
     <button class="button"  (click)="ShowPercentage('percentage');">Percentage</button>
     <button class="button"  (click)="ShowUnits('units');">Unit conversion</button>
     <button class="button"  (click)="ShowCounting('counting');">Counting</button>
+    <a>
     <img  (click)="openLink()" src="../../assets/images/1964417_github_logo_media_social_icon.png">
     <img  (click)="openLinkedin()" src="../../assets/images/2062080_linkedin_job_logo_network_professional_icon.png">
-    
+    </a>
 
 
   </div>
